[FIX] point_of_sale: long customer name correctly displayed
Small CSS change to make sure that when the customer name is too long,
the rest of the PoS ui is not displaced

opw-3087852

closes odoo/odoo#108159

X-original-commit: 2bfaa7fa0dc7e92f0ccbe4ec6e7c31bcfea4732e

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -756,6 +756,7 @@ td {
 .pos .actionpad .button.set-partner.decentered {
     padding-left: 40px;
     padding-right: 5px;
+    word-break: break-word;
 }
 .pos .actionpad .button .fa-user {
     position: absolute;
